deploy/cluster/istio/virtual-services/app-s42.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-s42
  namespace: production
spec:
  hosts:
    - s42.app
  gateways:
    - app-s42
  http:
    - name: http-jwtks-service # auth service for JWT keys
      match:
        - method:
            exact: GET
          uri:
            prefix: "/.well-known/jwks"
      rewrite:
        uri: "/jwks"
      route:
        - destination:
            host: http-jwtks-service.production.svc.cluster.local
            port:
              number: 5500
    - name: webhooked # webhooked endpoint
      match:
        - method:
            exact: POST
          uri:
            prefix: "/webhooks/v1alpha1"
      rewrite:
        uri: "/v1alpha1"
      route:
        - destination:
            host: webhooked.production.svc.cluster.local
            port:
              number: 8080
    - name: http-api-gql # api gateway endpoint
      match:
        - method:
            exact: POST
          uri:
            exact: "/graphql"
      rewrite:
        uri: "/graphql"
      route:
        - destination:
            host: http-api.production.svc.cluster.local
            port:
              number: 4000
    - name: http-api-gqli # api graphqli interface
      match:
        - method:
            exact: GET
          uri:
            exact: "/graphql"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: http-api.production.svc.cluster.local
            port:
              number: 4000
    - name: http-interface # app interface
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: http-interface.production.svc.cluster.local
            port:
              number: 3000
